<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_gravity="center"
    android:orientation="vertical"
    tools:context=".AboutActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="75dp"
        android:contentDescription="@string/app_name"
        android:src="@mipmap/ic_launcher"/>


    <TextView
        android:id="@+id/tvAppDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/app_name"
        android:layout_margin="5dp"
        android:textSize="14sp"
        android:textStyle="bold"/>



    <TextView
        android:id="@+id/tvAppVersion"
        android:layout_margin="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal|center"
        android:textSize="12sp" />

    <TextView
        android:layout_margin="5dp"
        android:id="@+id/tvAppDeveloper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/desenvolvido_por"
        android:textSize="12sp" />


    <ImageView
        android:layout_margin="5dp"
        android:layout_width="wrap_content"
        android:layout_height="75dp"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/app_name"
        android:src="@drawable/logoamarelo"/>


    <TextView
        android:layout_margin="10dp"
        android:id="@+id/tvAppDisclaimer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/text_disclaimer"

        android:textSize="12sp" />

    <Button
        android:id="@+id/btnViewPrivacyPolicies"
        android:layout_width="wrap_content"
        android:layout_margin="5dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/pol_ticas_de_privacidade"
        />

    <com.google.android.gms.ads.AdView
        android:id="@+id/adViewAbout"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_ad_unit_id"
        android:layout_width="match_parent"
        android:layout_margin="5dp"
        android:layout_height="wrap_content"/>


</LinearLayout>